# Blazing-Bevy

./: .gitignore  Blazing-Bevy.sln  Blazor-Bevy.sln  README.md
.github/workflows/: Bevy-Blazor-webapp.yml  Blazing-Bevy.yml  main_blazing-bevy.yml
Blazing-Bevy/: Blazing-Bevy.csproj  Program.cs  Startup.cs  _Imports.razor
Blazing-Bevy/Data/: WeatherForecast.cs  WeatherForecastService.cs
Blazing-Bevy/Pages/: About.razor  About.razor.css  Index.razor  _Host.cshtml
Blazing-Bevy/Pages/Icons/: LinkedInIcon.razor
Blazing-Bevy/Properties/: launchSettings.json
Blazing-Bevy/Shared/: MainLayout.razor
Blazing-Bevy/platformer/: Cargo.toml  Makefile.toml  index.html
Blazing-Bevy/platformer/src/: main.rs  map.rs
Blazing-Bevy/wwwroot/css/: style.css
Blazing-Bevy/wwwroot/js/: interop.js
Blazor-Bevy/: Program.cs  _Imports.razor
Blazor-Bevy/Pages/: About.razor  About.razor.css  Index.razor  Play.razor
Blazor-Bevy/Pages/Icons/: GitHubIcon.razor
Blazor-Bevy/Properties/: launchSettings.json
Blazor-Bevy/Shared/: Header.razor  MainLayout.razor  MainLayout.razor.css  NavBar.razor  NavBar.razor.css  NavMenu.razor
Blazor-Bevy/bevy_webgl2_app_template/: Cargo.toml
Blazor-Bevy/platformer/: Cargo.toml  README.MD
Blazor-Bevy/platformer/src/: main.rs  map.rs  player.rs
Blazor-Bevy/platformer/src/components/: sub.rs
Blazor-Bevy/platformer2/: Makefile.toml
Blazor-Bevy/platformer2/src/: main.rs
Blazor-Bevy/wwwroot/: bevy2.html  index.html
Blazor-Bevy/wwwroot/css/: style.css
Blazor-Bevy/wwwroot/js/: interop.js
Blazor-Bevy/wwwroot/target2/: .rustc_info.json
release/wwwroot/: Blazor-Bevy.styles.css  Blazor-Bevy.styles.css.br  index.html  index.html.br
release/wwwroot/_framework/: Blazor-Bevy.dll.br  Microsoft.AspNetCore.Authorization.dll.br  Microsoft.AspNetCore.Components.Web.dll.br  Microsoft.AspNetCore.Components.WebAssembly.dll.br  Microsoft.AspNetCore.Components.dll.br  Microsoft.Extensions.Configuration.Abstractions.dll.br  Microsoft.Extensions.Configuration.Json.dll.br  Microsoft.Extensions.Configuration.dll.br  Microsoft.Extensions.DependencyInjection.Abstractions.dll.br  Microsoft.Extensions.DependencyInjection.dll.br  Microsoft.Extensions.Logging.Abstractions.dll.br  Microsoft.Extensions.Logging.dll.br  Microsoft.Extensions.Options.dll.br  Microsoft.Extensions.Primitives.dll.br  System.Buffers.dll.br  System.Collections.Concurrent.dll.br  System.Collections.Immutable.dll.br  System.Collections.dll.br  (+22 more)
(+4 files in other folders)
