[package]
authors = ["Andrew Smith <andrewcs149@gmail.com>"]
edition = "2018"
name = "platformer2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2",
]

[dependencies]
bevy = {version = "0.5.0", default-features = false}
bevy_rapier2d = "0.10.2"
bevy_webgl2 = {version = "0.5.0", optional = true}

getrandom = {version = "0.1", features = ["wasm-bindgen"]}
rand = "0.7"
winit = {version = "0.24.0"}

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = 's'
